assets/css/style.css
/* ... */
  
/*Responsive footer for devices with screens less than 880px*/

@media only screen and (max-width: 880px) {

  .footer-container .footer-left,
  .footer-container .footer-center,
  .footer-container .footer-right {
    display: block;                                 /*child containers display in blocks one on top another*/
    width: 100%;                                    
    margin-bottom: 2.5rem;
    text-align: center;                             /*child containers content alignement*/
  }                                               
}

/*Contact page*/

/*Contact page template was borrowed from https://www.codinglabweb.com/2021/04/contact-us-form-in-html-and-css-free.html 
The borrowed version was restyled according to project needs*/

.contact {
  background-color: #d6d8de;
  width: 100vw; 
}

.contact-container .contact-content {
  display: flex;                                    /*flexbox model setting*/            
  align-items: center;
  justify-content: space-between;    
  padding: 1rem;                                    /*space on the sides*/                   
}

.contact-container .contact-content .left-side {
  width: 25%;
  height: 100%;
  display: flex;
  flex-direction: column;                           /*vertical display of content*/
  align-items: center;                              /*contact details alignment centrally*/
  justify-content: center;
  margin-bottom: 4rem;                              /*air to breath on the bottom*/
  position: relative;                              /*left child container sizing and alignment*/
}

.contact-content .left-side::before {
  content: '';                                       /*property to insert generated divider*/
  position: absolute;
  height: 70%;                                       /*divider height*/
  width: 0.13rem;
  right: -1rem;                                      /*divider alignment on horizontal axis*/                                
  top: 50%;
  transform: translateY(-50%);                       /*divider alignment centrally along vertical axis*/
  background: #333333;                             /*divider styling and layout*/
}

.contact-content .left-side .details { 
  margin: 2rem;                                       
  text-align: center;                                /*left child container contact details layout*/                        
}                                                   

.contact-content .left-side .details i {
  font-size: 1.9rem;
  color: #333333;
  margin-bottom: 0.6rem;                            /*fontawesome typography and alignment*/                 
}

.contact-content .left-side .details .topic {
  font-size: 1.3rem;
  padding: 1rem;
  letter-spacing: 0.3rem;
  font-weight: 600;   
  color: #e94f64;                               /*left child container topic typography*/
}

.contact-content .left-side .details .text-one,
.contact-content .left-side .details .text-two  {
  font-size: 1.3rem;
  letter-spacing: 0.2rem;
  font-weight: 500;
  color: #333333;                                 /*left child container text typography*/
}

.contact-container .contact-content .right-side {
  width: 100vw;
  margin-left: 4.7rem;                               /*right child containner and divider alignment*/
}

.contact-content .right-side .topic-text {
  font-size: 1.7rem;
  font-weight: 600;
  letter-spacing: 0.7rem;
  padding: 2rem;
  text-transform: uppercase;
  color: #e94f64;                                 /*right child container content typography*/
}

.right-side p {
  color: #333333;
  padding: 2rem 4rem 2rem 0;                        /*right child container paragraph typography and alignment*/
}

.right-side .input-box {
  height: 3rem;
  width: 95%;
  margin: 0.75rem 0;                                 /*input box fields sizing and alignement*/
}

.right-side .input-box input {
  height: 95%;
  width: 95%;
  font-size: 1rem;
  background: #F0F1F8;
  border-radius: 0.3rem;
  padding: 0 0.9rem;                                /*input fileds styling*/                  
}

.right-side .message-box {
  min-height: 7.5rem;                               /*input message box sizing*/
}

.right-side .button {
  display: inline-block;
  margin-top: 0.75rem;                              /*input submit button sizing and positioning*/
}

.right-side .button [type="submit"] {
  color: #fff;
  font-size: 1.1rem;
  outline: none;
  border: none;
  padding: 0.5rem 1rem;
  border-radius: 0.4rem;
  background: #212121;                               /*input submit button styling*/

}

.button [type="submit"]:hover {
  background: orangered;                             /*input submit button mouse over styling*/
}

.text-one a {
  text-decoration: none;
  color: #212121;                                   /*email link styling*/            
}

.text-one a:hover {
  color: orangered;                                 /*email link hover effect*/
}

/*Responsive contact for devices with screens smaller than 820px*/

@media only screen and (max-width: 820px) {

  .contact-container {
    margin: 2.5rem 0;
    height: 100%;
    width: 100%;                                      /*space around contact form*/
  }

  .contact-container .contact-content {
    flex-direction: column-reverse;                    /*send us a message appears first*/
  }

 .contact-container .contact-content .left-side {
   width: 100%;
   flex-direction: row;
   margin-top: 2.5rem;
   justify-content: center;
   flex-wrap: wrap;                                         /*fontawesome content transition to bottom*/
 }

 .contact-container .contact-content .left-side::before {
   display: none;                                           /*divider elimination*/
 }

 .contact-container .contact-content .right-side {
   width: 100%;
   margin-top: 5rem;
   margin-left: 2rem;                                       /*contact form expansion taking left side content transition to bottom*/
 }
}
/* ... */

